--- a/exercises/practice/darts/.meta/config.json
+++ b/exercises/practice/darts/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Write a function that returns the earned points in a single toss of a Darts game",
-  "authors": ["MichaelBunker"],
-  "contributors": [],
+  "authors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["Darts.php"],
-    "test": ["DartsTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "Darts.php"
+    ],
+    "test": [
+      "DartsTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Write a function that returns the earned points in a single toss of a Darts game"
 }
