--- a/exercises/practice/difference-of-squares/.meta/config.json
+++ b/exercises/practice/difference-of-squares/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Find the difference between the square of the sum and the sum of the squares of the first N natural numbers.",
   "authors": [],
   "contributors": [
     "arueckauer",
@@ -11,10 +10,17 @@
     "Scientifica96"
   ],
   "files": {
-    "solution": ["DifferenceOfSquares.php"],
-    "test": ["DifferenceOfSquaresTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "DifferenceOfSquares.php"
+    ],
+    "test": [
+      "DifferenceOfSquaresTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Find the difference between the square of the sum and the sum of the squares of the first N natural numbers.",
   "source": "Problem 6 at Project Euler",
   "source_url": "https://projecteuler.net/problem=6"
 }
