--- a/exercises/practice/high-scores/.meta/config.json
+++ b/exercises/practice/high-scores/.meta/config.json
@@ -1,10 +1,20 @@
 {
-  "blurb": "Manage a player's High Score list",
-  "authors": ["camilopayan"],
-  "contributors": ["MichaelBunker"],
+  "authors": [
+    "camilopayan"
+  ],
+  "contributors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["HighScores.php"],
-    "test": ["HighScoresTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "HighScores.php"
+    ],
+    "test": [
+      "HighScoresTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Manage a player's High Score list"
 }
