--- a/exercises/practice/largest-series-product/.meta/config.json
+++ b/exercises/practice/largest-series-product/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Given a string of digits, calculate the largest product for a contiguous substring of digits of length n.",
-  "authors": ["brettsantore"],
+  "authors": [
+    "brettsantore"
+  ],
   "contributors": [
     "arueckauer",
     "G-Rath",
@@ -10,10 +11,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["LargestSeriesProduct.php"],
-    "test": ["LargestSeriesProductTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "LargestSeriesProduct.php"
+    ],
+    "test": [
+      "LargestSeriesProductTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a string of digits, calculate the largest product for a contiguous substring of digits of length n.",
   "source": "A variation on Problem 8 at Project Euler",
   "source_url": "https://projecteuler.net/problem=8"
 }
