--- a/exercises/practice/linked-list/.meta/config.json
+++ b/exercises/practice/linked-list/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Implement a doubly linked list",
-  "authors": ["MichaelBunker"],
-  "contributors": [],
+  "authors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["LinkedList.php"],
-    "test": ["LinkedListTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "LinkedList.php"
+    ],
+    "test": [
+      "LinkedListTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Implement a doubly linked list"
 }
