--- a/exercises/practice/mask-credit-card/.meta/config.json
+++ b/exercises/practice/mask-credit-card/.meta/config.json
@@ -1,10 +1,20 @@
 {
-  "authors": ["codedge"],
-  "contributors": ["neenjaw"],
+  "authors": [
+    "codedge"
+  ],
+  "contributors": [
+    "neenjaw"
+  ],
   "files": {
-    "solution": ["MaskCreditCard.php"],
-    "test": ["MaskCreditCardTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "MaskCreditCard.php"
+    ],
+    "test": [
+      "MaskCreditCardTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
   "blurb": "Create a function to mask digits of a credit card number."
 }
