--- a/exercises/practice/matrix/.meta/config.json
+++ b/exercises/practice/matrix/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Given a string representing a matrix of numbers, return the rows and columns of that matrix.",
-  "authors": ["MichaelBunker"],
-  "contributors": [],
+  "authors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["Matrix.php"],
-    "test": ["MatrixTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "Matrix.php"
+    ],
+    "test": [
+      "MatrixTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Given a string representing a matrix of numbers, return the rows and columns of that matrix."
 }
