--- a/exercises/practice/pangram/.meta/config.json
+++ b/exercises/practice/pangram/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Determine if a sentence is a pangram.",
-  "authors": ["ecrmnn"],
+  "authors": [
+    "ecrmnn"
+  ],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
@@ -9,10 +10,17 @@
     "rossbearman"
   ],
   "files": {
-    "solution": ["Pangram.php"],
-    "test": ["PangramTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Pangram.php"
+    ],
+    "test": [
+      "PangramTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Determine if a sentence is a pangram.",
   "source": "Wikipedia",
   "source_url": "https://en.wikipedia.org/wiki/Pangram"
 }
