--- a/exercises/practice/poker/.meta/config.json
+++ b/exercises/practice/poker/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Pick the best hand(s) from a list of poker hands.",
-  "authors": ["MichaelBunker"],
-  "contributors": [],
+  "authors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["Poker.php"],
-    "test": ["PokerTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "Poker.php"
+    ],
+    "test": [
+      "PokerTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Pick the best hand(s) from a list of poker hands."
 }
