--- a/exercises/practice/robot-simulator/.meta/config.json
+++ b/exercises/practice/robot-simulator/.meta/config.json
@@ -1,11 +1,24 @@
 {
-  "blurb": "Write a robot simulator.",
-  "authors": ["Hrumpa"],
-  "contributors": ["arueckauer", "G-Rath", "kytrinyx", "petemcfarlane"],
+  "authors": [
+    "Hrumpa"
+  ],
+  "contributors": [
+    "arueckauer",
+    "G-Rath",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": ["RobotSimulator.php"],
-    "test": ["RobotSimulatorTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "RobotSimulator.php"
+    ],
+    "test": [
+      "RobotSimulatorTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Write a robot simulator.",
   "source": "Inspired by an interview question at a famous company."
 }
