--- a/exercises/practice/scale-generator/.meta/config.json
+++ b/exercises/practice/scale-generator/.meta/config.json
@@ -1,10 +1,20 @@
 {
-  "blurb": "Generate musical scales, given a starting note and a set of intervals. ",
-  "authors": ["camilopayan"],
-  "contributors": ["0x647262"],
+  "authors": [
+    "camilopayan"
+  ],
+  "contributors": [
+    "0x647262"
+  ],
   "files": {
-    "solution": ["ScaleGenerator.php"],
-    "test": ["ScaleGeneratorTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "ScaleGenerator.php"
+    ],
+    "test": [
+      "ScaleGeneratorTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Generate musical scales, given a starting note and a set of intervals. "
 }
