--- a/exercises/practice/space-age/.meta/config.json
+++ b/exercises/practice/space-age/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Given an age in seconds, calculate how old someone is in terms of a given planet's solar years.",
-  "authors": ["camilopayan"],
+  "authors": [
+    "camilopayan"
+  ],
   "contributors": [
     "arueckauer",
     "G-Rath",
@@ -9,10 +10,17 @@
     "petemcfarlane"
   ],
   "files": {
-    "solution": ["SpaceAge.php"],
-    "test": ["SpaceAgeTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "SpaceAge.php"
+    ],
+    "test": [
+      "SpaceAgeTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given an age in seconds, calculate how old someone is in terms of a given planet's solar years.",
   "source": "Partially inspired by Chapter 1 in Chris Pine's online Learn to Program tutorial.",
   "source_url": "https://pine.fm/LearnToProgram/?Chapter=01"
 }
