--- a/exercises/practice/trinary/.meta/config.json
+++ b/exercises/practice/trinary/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Convert a trinary number, represented as a string (e.g. '102012'), to its decimal equivalent using first principles.",
   "authors": [],
   "contributors": [
     "arueckauer",
@@ -12,10 +11,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["Trinary.php"],
-    "test": ["TrinaryTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Trinary.php"
+    ],
+    "test": [
+      "TrinaryTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Convert a trinary number, represented as a string (e.g. '102012'), to its decimal equivalent using first principles.",
   "source": "All of Computer Science",
   "source_url": "https://www.wolframalpha.com/input/?i=binary&a=*C.binary-_*MathWorld-"
 }
