--- a/exercises/practice/acronym/.meta/config.json
+++ b/exercises/practice/acronym/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Convert a long phrase to its acronym",
-  "authors": ["pmatseykanets"],
+  "authors": [
+    "pmatseykanets"
+  ],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
@@ -9,10 +10,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["Acronym.php"],
-    "test": ["AcronymTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Acronym.php"
+    ],
+    "test": [
+      "AcronymTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Convert a long phrase to its acronym",
   "source": "Julien Vanier",
   "source_url": "https://github.com/monkbroc"
 }
