--- a/exercises/practice/beer-song/.meta/config.json
+++ b/exercises/practice/beer-song/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Produce the lyrics to that beloved classic, that field-trip favorite: 99 Bottles of Beer on the Wall.",
-  "authors": ["nhoag"],
+  "authors": [
+    "nhoag"
+  ],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
@@ -9,10 +10,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["BeerSong.php"],
-    "test": ["BeerSongTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "BeerSong.php"
+    ],
+    "test": [
+      "BeerSongTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Produce the lyrics to that beloved classic, that field-trip favorite: 99 Bottles of Beer on the Wall.",
   "source": "Learn to Program by Chris Pine",
   "source_url": "https://pine.fm/LearnToProgram/?Chapter=06"
 }
