--- a/exercises/practice/binary-search/.meta/config.json
+++ b/exercises/practice/binary-search/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Implement a binary search algorithm.",
-  "authors": ["arthurchipdean"],
+  "authors": [
+    "arthurchipdean"
+  ],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
@@ -9,10 +10,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["BinarySearch.php"],
-    "test": ["BinarySearchTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "BinarySearch.php"
+    ],
+    "test": [
+      "BinarySearchTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Implement a binary search algorithm.",
   "source": "Wikipedia",
   "source_url": "https://en.wikipedia.org/wiki/Binary_search_algorithm"
 }
