--- a/exercises/practice/bob/.meta/config.json
+++ b/exercises/practice/bob/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Bob is a lackadaisical teenager. In conversation, his responses are very limited.",
-  "authors": ["brettsantore"],
+  "authors": [
+    "brettsantore"
+  ],
   "contributors": [
     "arueckauer",
     "DerTee",
@@ -9,10 +10,17 @@
     "petemcfarlane"
   ],
   "files": {
-    "solution": ["Bob.php"],
-    "test": ["BobTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Bob.php"
+    ],
+    "test": [
+      "BobTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Bob is a lackadaisical teenager. In conversation, his responses are very limited.",
   "source": "Inspired by the 'Deaf Grandma' exercise in Chris Pine's Learn to Program tutorial.",
   "source_url": "https://pine.fm/LearnToProgram/?Chapter=06"
 }
