--- a/exercises/practice/clock/.meta/config.json
+++ b/exercises/practice/clock/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Implement a clock that handles times without dates.",
-  "authors": ["jrdnull"],
+  "authors": [
+    "jrdnull"
+  ],
   "contributors": [
     "arueckauer",
     "dkinzer",
@@ -10,10 +11,17 @@
     "petemcfarlane"
   ],
   "files": {
-    "solution": ["Clock.php"],
-    "test": ["ClockTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Clock.php"
+    ],
+    "test": [
+      "ClockTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Implement a clock that handles times without dates.",
   "source": "Pairing session with Erin Drummond",
   "source_url": "https://twitter.com/ebdrummond"
 }
