--- a/exercises/practice/gigasecond/.meta/config.json
+++ b/exercises/practice/gigasecond/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Given a moment, determine the moment that would be after a gigasecond has passed.",
   "authors": [],
   "contributors": [
     "arueckauer",
@@ -16,10 +15,17 @@
     "zembrowski"
   ],
   "files": {
-    "solution": ["Gigasecond.php"],
-    "test": ["GigasecondTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Gigasecond.php"
+    ],
+    "test": [
+      "GigasecondTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a moment, determine the moment that would be after a gigasecond has passed.",
   "source": "Chapter 9 in Chris Pine's online Learn to Program tutorial.",
   "source_url": "https://pine.fm/LearnToProgram/?Chapter=09"
 }
