--- a/exercises/practice/grade-school/.meta/config.json
+++ b/exercises/practice/grade-school/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Given students' names along with the grade that they are in, create a roster for the school",
   "authors": [],
   "contributors": [
     "arueckauer",
@@ -11,10 +10,17 @@
     "rossbearman"
   ],
   "files": {
-    "solution": ["GradeSchool.php"],
-    "test": ["GradeSchoolTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "GradeSchool.php"
+    ],
+    "test": [
+      "GradeSchoolTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given students' names along with the grade that they are in, create a roster for the school",
   "source": "A pairing session with Phil Battos at gSchool",
   "source_url": "https://gschool.it"
 }
