--- a/exercises/practice/isogram/.meta/config.json
+++ b/exercises/practice/isogram/.meta/config.json
@@ -1,12 +1,25 @@
 {
-  "blurb": "Determine if a word or phrase is an isogram.",
-  "authors": ["ecrmnn"],
-  "contributors": ["arueckauer", "kunicmarko20", "kytrinyx", "petemcfarlane"],
+  "authors": [
+    "ecrmnn"
+  ],
+  "contributors": [
+    "arueckauer",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": ["Isogram.php"],
-    "test": ["IsogramTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Isogram.php"
+    ],
+    "test": [
+      "IsogramTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Determine if a word or phrase is an isogram.",
   "source": "Wikipedia",
   "source_url": "https://en.wikipedia.org/wiki/Isogram"
 }
