--- a/exercises/practice/leap/.meta/config.json
+++ b/exercises/practice/leap/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Given a year, report if it is a leap year.",
   "authors": [],
   "contributors": [
     "arueckauer",
@@ -10,10 +9,17 @@
     "petemcfarlane"
   ],
   "files": {
-    "solution": ["Leap.php"],
-    "test": ["LeapTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Leap.php"
+    ],
+    "test": [
+      "LeapTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a year, report if it is a leap year.",
   "source": "JavaRanch Cattle Drive, exercise 3",
   "source_url": "https://www.javaranch.com/leap.jsp"
 }
