--- a/exercises/practice/luhn/.meta/config.json
+++ b/exercises/practice/luhn/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Given a number determine whether or not it is valid per the Luhn formula.",
-  "authors": ["Pierre-Vdsp"],
+  "authors": [
+    "Pierre-Vdsp"
+  ],
   "contributors": [
     "arueckauer",
     "dstockto",
@@ -9,10 +10,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["Luhn.php"],
-    "test": ["LuhnTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Luhn.php"
+    ],
+    "test": [
+      "LuhnTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a number determine whether or not it is valid per the Luhn formula.",
   "source": "The Luhn Algorithm on Wikipedia",
   "source_url": "https://en.wikipedia.org/wiki/Luhn_algorithm"
 }
