--- a/exercises/practice/markdown/.meta/config.json
+++ b/exercises/practice/markdown/.meta/config.json
@@ -1,10 +1,22 @@
 {
-  "blurb": "Refactor a Markdown parser",
-  "authors": ["petemcfarlane"],
-  "contributors": ["arueckauer", "kytrinyx", "yisraeldov"],
+  "authors": [
+    "petemcfarlane"
+  ],
+  "contributors": [
+    "arueckauer",
+    "kytrinyx",
+    "yisraeldov"
+  ],
   "files": {
-    "solution": ["Markdown.php"],
-    "test": ["MarkdownTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "Markdown.php"
+    ],
+    "test": [
+      "MarkdownTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Refactor a Markdown parser"
 }
