--- a/exercises/practice/minesweeper/.meta/config.json
+++ b/exercises/practice/minesweeper/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Add the numbers to a minesweeper board",
   "authors": [
     "petemcfarlane"
   ],
@@ -19,5 +18,6 @@
     "example": [
       ".meta/example.php"
     ]
-  }
+  },
+  "blurb": "Add the numbers to a minesweeper board"
 }
