--- a/exercises/practice/nth-prime/.meta/config.json
+++ b/exercises/practice/nth-prime/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Given a number n, determine what the nth prime is.",
-  "authors": ["arthurchipdean"],
+  "authors": [
+    "arthurchipdean"
+  ],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
@@ -9,10 +10,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["NthPrime.php"],
-    "test": ["NthPrimeTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "NthPrime.php"
+    ],
+    "test": [
+      "NthPrimeTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a number n, determine what the nth prime is.",
   "source": "A variation on Problem 7 at Project Euler",
   "source_url": "https://projecteuler.net/problem=7"
 }
