--- a/exercises/practice/nucleotide-count/.meta/config.json
+++ b/exercises/practice/nucleotide-count/.meta/config.json
@@ -1,12 +1,24 @@
 {
-  "blurb": "Given a DNA string, compute how many times each nucleotide occurs in the string.",
-  "authors": ["mikeSimonson"],
-  "contributors": ["arueckauer", "kytrinyx", "petemcfarlane"],
+  "authors": [
+    "mikeSimonson"
+  ],
+  "contributors": [
+    "arueckauer",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": ["NucleotideCount.php"],
-    "test": ["NucleotideCountTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "NucleotideCount.php"
+    ],
+    "test": [
+      "NucleotideCountTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a DNA string, compute how many times each nucleotide occurs in the string.",
   "source": "The Calculating DNA Nucleotides_problem at Rosalind",
   "source_url": "https://rosalind.info/problems/dna/"
 }
