--- a/exercises/practice/ocr-numbers/.meta/config.json
+++ b/exercises/practice/ocr-numbers/.meta/config.json
@@ -1,12 +1,25 @@
 {
-  "blurb": "Given a 3 x 4 grid of pipes, underscores, and spaces, determine which number is represented, or whether it is garbled.",
-  "authors": ["Hrumpa"],
-  "contributors": ["arueckauer", "G-Rath", "kytrinyx", "petemcfarlane"],
+  "authors": [
+    "Hrumpa"
+  ],
+  "contributors": [
+    "arueckauer",
+    "G-Rath",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": ["OcrNumbers.php"],
-    "test": ["OcrNumbersTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "OcrNumbers.php"
+    ],
+    "test": [
+      "OcrNumbersTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a 3 x 4 grid of pipes, underscores, and spaces, determine which number is represented, or whether it is garbled.",
   "source": "Inspired by the Bank OCR kata",
   "source_url": "https://codingdojo.org/cgi-bin/wiki.pl?KataBankOCR"
 }
