--- a/exercises/practice/palindrome-products/.meta/config.json
+++ b/exercises/practice/palindrome-products/.meta/config.json
@@ -1,12 +1,23 @@
 {
-  "blurb": "Detect palindrome products in a given range.",
-  "authors": ["camilopayan"],
-  "contributors": ["arueckauer", "yisraeldov"],
+  "authors": [
+    "camilopayan"
+  ],
+  "contributors": [
+    "arueckauer",
+    "yisraeldov"
+  ],
   "files": {
-    "solution": ["PalindromeProducts.php"],
-    "test": ["PalindromeProductsTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "PalindromeProducts.php"
+    ],
+    "test": [
+      "PalindromeProductsTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Detect palindrome products in a given range.",
   "source": "Problem 4 at Project Euler",
   "source_url": "https://projecteuler.net/problem=4"
 }
