--- a/exercises/practice/prime-factors/.meta/config.json
+++ b/exercises/practice/prime-factors/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Compute the prime factors of a given natural number.",
-  "authors": ["arthurchipdean"],
+  "authors": [
+    "arthurchipdean"
+  ],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
@@ -9,10 +10,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["PrimeFactors.php"],
-    "test": ["PrimeFactorsTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "PrimeFactors.php"
+    ],
+    "test": [
+      "PrimeFactorsTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Compute the prime factors of a given natural number.",
   "source": "The Prime Factors Kata by Uncle Bob",
   "source_url": "https://butunclebob.com/ArticleS.UncleBob.ThePrimeFactorsKata"
 }
