--- a/exercises/practice/queen-attack/.meta/config.json
+++ b/exercises/practice/queen-attack/.meta/config.json
@@ -1,6 +1,7 @@
 {
-  "blurb": "Given the position of two queens on a chess board, indicate whether or not they are positioned so that they can attack each other.",
-  "authors": ["MichaelBunker"],
+  "authors": [
+    "MichaelBunker"
+  ],
   "contributors": [
     "arueckauer",
     "G-Rath",
@@ -9,10 +10,17 @@
     "petemcfarlane"
   ],
   "files": {
-    "solution": ["QueenAttack.php"],
-    "test": ["QueenAttackTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "QueenAttack.php"
+    ],
+    "test": [
+      "QueenAttackTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given the position of two queens on a chess board, indicate whether or not they are positioned so that they can attack each other.",
   "source": "J Dalbey's Programming Practice problems",
   "source_url": "https://users.csc.calpoly.edu/~jdalbey/103/Projects/ProgrammingPractice.html"
 }
