--- a/exercises/practice/roman-numerals/.meta/config.json
+++ b/exercises/practice/roman-numerals/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Write a function to convert from normal numbers to Roman Numerals.",
   "authors": [],
   "contributors": [
     "arueckauer",
@@ -12,10 +11,17 @@
     "zembrowski"
   ],
   "files": {
-    "solution": ["RomanNumerals.php"],
-    "test": ["RomanNumeralsTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "RomanNumerals.php"
+    ],
+    "test": [
+      "RomanNumeralsTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Write a function to convert from normal numbers to Roman Numerals.",
   "source": "The Roman Numeral Kata",
   "source_url": "https://codingdojo.org/cgi-bin/index.pl?KataRomanNumerals"
 }
