--- a/exercises/practice/scrabble-score/.meta/config.json
+++ b/exercises/practice/scrabble-score/.meta/config.json
@@ -1,12 +1,25 @@
 {
-  "blurb": "Given a word, compute the Scrabble score for that word.",
-  "authors": ["MichaelBunker"],
-  "contributors": ["arueckauer", "kunicmarko20", "kytrinyx", "petemcfarlane"],
+  "authors": [
+    "MichaelBunker"
+  ],
+  "contributors": [
+    "arueckauer",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": ["ScrabbleScore.php"],
-    "test": ["ScrabbleScoreTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "ScrabbleScore.php"
+    ],
+    "test": [
+      "ScrabbleScoreTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Given a word, compute the Scrabble score for that word.",
   "source": "Inspired by the Extreme Startup game",
   "source_url": "https://github.com/rchatley/extreme_startup"
 }
