--- a/exercises/practice/sieve/.meta/config.json
+++ b/exercises/practice/sieve/.meta/config.json
@@ -1,12 +1,25 @@
 {
-  "blurb": "Use the Sieve of Eratosthenes to find all the primes from 2 up to a given number.",
-  "authors": ["jeslopcru"],
-  "contributors": ["arueckauer", "kunicmarko20", "kytrinyx", "petemcfarlane"],
+  "authors": [
+    "jeslopcru"
+  ],
+  "contributors": [
+    "arueckauer",
+    "kunicmarko20",
+    "kytrinyx",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": ["Sieve.php"],
-    "test": ["SieveTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Sieve.php"
+    ],
+    "test": [
+      "SieveTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Use the Sieve of Eratosthenes to find all the primes from 2 up to a given number.",
   "source": "Sieve of Eratosthenes at Wikipedia",
   "source_url": "https://en.wikipedia.org/wiki/Sieve_of_Eratosthenes"
 }
