--- a/exercises/practice/wordy/.meta/config.json
+++ b/exercises/practice/wordy/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Parse and evaluate simple math word problems returning the answer as an integer.",
   "authors": [],
   "contributors": [
     "arueckauer",
@@ -11,10 +10,17 @@
     "yisraeldov"
   ],
   "files": {
-    "solution": ["Wordy.php"],
-    "test": ["WordyTest.php"],
-    "example": [".meta/example.php"]
+    "solution": [
+      "Wordy.php"
+    ],
+    "test": [
+      "WordyTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
   },
+  "blurb": "Parse and evaluate simple math word problems returning the answer as an integer.",
   "source": "Inspired by one of the generated questions in the Extreme Startup game.",
   "source_url": "https://github.com/rchatley/extreme_startup"
 }
