Fix roman-numerals source link

--- a/exercises/practice/roman-numerals/.meta/config.json
+++ b/exercises/practice/roman-numerals/.meta/config.json
@@ -17,5 +17,5 @@
     "example": [".meta/example.php"]
   },
   "source": "The Roman Numeral Kata",
-  "source_url": "https://codingdojo.org/cgi-bin/index.pl?KataRomanNumerals"
+  "source_url": "https://codingdojo.org/kata/RomanNumerals/"
 }
