--- a/concepts/constructor-promotion/.meta/config.json
+++ b/concepts/constructor-promotion/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "`null` concept in PHP",
+  "blurb": "Constructor property promostion in PHP",
   "authors": ["neenjaw"],
   "contributors": []
 }
