--- a/concepts/readonly-properties/.meta/config.json
+++ b/concepts/readonly-properties/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "`null` concept in PHP",
+  "blurb": "Readonly classes and properties in PHP",
   "authors": ["neenjaw"],
   "contributors": []
 }
