concept exercise; basic syntax

--- a/exercises/concept/lasagna/.meta/config.json
+++ b/exercises/concept/lasagna/.meta/config.json
@@ -15,5 +15,5 @@
       ]
    },
    "language_version": ">=8.1",
-   "blurb": "Learn about ____"
+   "blurb": "Learn about the basics of PHP syntax!"
 }
